--- a/contents/en/documents/2.5.html
+++ b/contents/en/documents/2.5.html
@@ -38,7 +38,7 @@
 <h3><code>ebiten.ColorScale</code> and <code>colorm</code></h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/2171">#2171</a>)</p>
 <p>A new struct <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ColorScale"><code>ebiten.ColorScale</code></a> and a new package <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/colorm"><code>colorm</code></a> was introduced. These APIs aim to replace existing APIs for color matrices. This makes your code more explicit about execution costs i.e. a number of draw calls.</p>
-<p>For just scalings, you can use a new struct <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ColorScale"><code>ebiten.ColorScale</code></a>. For more complex usages of a color matrix, you can use APIs in the package <code>colorm</code></p>
+<p>For just scalings, you can use a new struct <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ColorScale"><code>ebiten.ColorScale</code></a>. For more complex usages of a color matrix, you can use APIs in the package <code>colorm</code>.</p>
 <p>A new member <code>ColorScale</code> was also added to <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#DrawImageOptions"><code>ebiten.DrawImageOptions</code></a> and <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#DrawRectShaderOptions"><code>ebiten.DrawRectShaderOptions</code></a>.</p>
 <h3>GPU Optimization with <code>SetScreenClearedEveryFrame(false)</code></h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/2342">#2342</a>)</p>
@@ -67,7 +67,7 @@
   <li>Rendering onto sub-images works more efficiently (<a href="https://github.com/hajimehoshi/ebiten/issues/2232">#2232</a>).</li>
   <li>Memory usage was reduced (<a href="https://github.com/hajimehoshi/ebiten/issues/2274">#2274</a>).</li>
   <li>Non-squreare internal texture atlasese are allowed (<a href="https://github.com/hajimehoshi/ebiten/issues/2327">#2327</a>).</li>
-  <li>The number of internal textures were reduced (<a href="https://github.com/hajimehoshi/ebiten/issues/2581">#2581</a>).</li>
+  <li>A number of internal textures was reduced (<a href="https://github.com/hajimehoshi/ebiten/issues/2581">#2581</a>).</li>
 </ul>
 <h3>Deprecated APIs</h3>
 <p>Some APIs were deprecated. The deprecated APIs are still available during the version 2, but it is recommended to replace the new APIs.</p>
