--- a/contents/en/documents/2.5.html
+++ b/contents/en/documents/2.5.html
@@ -4,7 +4,8 @@
 <p><em>Ebitengine v2.5.0 has not been released yet. This document is draft.</em></p>
 <h3>Supporting Xbox</h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/2084">#2084</a>)</p>
-<p>Ebitengine now supports Xbox! A new Ebitengine game "<a href="https://odencat.com/bakemono/">Meg's Monster</a>", which was released on March 2nd, supports multiple platforms including Xbox One and Xbox Series X|S. We are preparing more updates to make Ebitengine for Xbox available for other users. Stay tuned!</p>
+<p>Ebitengine now supports Xbox! <a href="https://odencat.com">Odencat</a> released a new Ebitengine game "<a href="https://odencat.com/bakemono/">Meg's Monster</a>" on March 2nd, 2023. This game supports multiple platforms including Xbox One and Xbox Series X|S.</p>
+<p>We are preparing more updates to make Ebitengine for Xbox available for other users. Stay tuned!</p>
 <h3>Vector graphics</h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/1843">#1843</a>, <a href="https://github.com/hajimehoshi/ebiten/issues/2387">#2387</a>)</p>
 <p>Some APIs to render lines or various shapes were added to the <code>vector</code> package:</p>
