contents/en/documents/2.5: update

--- a/contents/en/documents/2.5.html
+++ b/contents/en/documents/2.5.html
@@ -85,7 +85,7 @@
   <li>A number of internal textures was reduced (<a href="https://github.com/hajimehoshi/ebiten/issues/2581">#2581</a>).</li>
 </ul>
 <h3>Deprecated APIs</h3>
-<p>Some APIs were deprecated. The deprecated APIs are still available during the version 2, but it is recommended to replace the new APIs.</p>
+<p>Some APIs were deprecated. The deprecated APIs are still available during the version 2, but it is recommended to replace them with the new APIs.</p>
 <table>
   <tr><th>v2.4 and older</th><th>v2.5 and newer</th></tr>
   <tr><td><code>type ebiten.ColorM</code></td><td><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ColorScale"><code>type ebiten.ColorScale</code></a> or the package <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/colorm"><code>colorm</code></a></td></tr>
