--- a/contents/en/documents/2.5.html
+++ b/contents/en/documents/2.5.html
@@ -8,6 +8,10 @@
 <p>We are preparing more updates to make Ebitengine for Xbox available for other users. Stay tuned!</p>
 <h3>Vector graphics</h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/1843">#1843</a>, <a href="https://github.com/hajimehoshi/ebiten/issues/2387">#2387</a>)</p>
+<figure>
+  <p class="img"><img src="/images/documents/2.5/lines.png" alt="Lines"></p>
+  <figcaption>An example 'lines'</figcaption>
+</figure>
 <p>Some APIs to render lines or various shapes were added to the <code>vector</code> package:</p>
 <ul>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/vector#Direction"><code>type Direction</code></a></li>
@@ -23,10 +27,14 @@
 <p>Also, a new member <code>AntiAlias</code> was added to <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#DrawTrianglesOptions"><code>ebiten.DrawTrianglesOptions</code></a> and <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#DrawTrianglesShaderOptions"><code>ebiten.DrawTrianglesShaderOptions</code></a>. <code>AntiAlias</code> is useful to render vector graphics with smooth edges.</p>
 <h3>Blend</h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/1450">#1450</a>, <a href="https://github.com/hajimehoshi/ebiten/issues/2382">#2382</a>)</p>
-<p>A new type <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#Blend"><code>ebiten.Blend</code></a> was introduced. <code>Blend</code> aims to replace <code>ebiten.CompositeMode</code>. With <code>Blend</code>, you can have finer control than <code>CompositeMode</code> by specifying blend factors and operations for source/destination RGB/alpha values. You can also use preset <code>Blend</code> constants like <code>BlendSourceOver</code>.</p>
+<figure>
+  <p class="img"><img src="/images/documents/2.5/blend.png" alt="blend"></p>
+  <figcaption>An example 'blend'</figcaption>
+</figure>
+<p>A new type <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#Blend"><code>ebiten.Blend</code></a> was added. <code>Blend</code> aims to replace <code>ebiten.CompositeMode</code>. With <code>Blend</code>, you can have finer control than <code>CompositeMode</code> by specifying blend factors and operations for source/destination RGB/alpha values. You can also use preset <code>Blend</code> constants like <code>BlendSourceOver</code>.</p>
 <h3><code>RunGameWithOptions</code></h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/2378">#2378</a>, <a href="https://github.com/hajimehoshi/ebiten/issues/1518">#1518</a>)</p>
-<p>A new function <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#RunGameWithOptions"><code>ebiten.RunGameWithOptions</code></a> and a new struct <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#RunGameOptions"><code>ebiten.RunGameOptions</code></a> were introduced. <code>RunGameWithOptions</code> is a new function to run a game with options. You can specify options by <code>RunGameOptions</code>.</p>
+<p>A new function <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#RunGameWithOptions"><code>ebiten.RunGameWithOptions</code></a> and a new struct <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#RunGameOptions"><code>ebiten.RunGameOptions</code></a> were added. <code>RunGameWithOptions</code> is a new function to run a game with options. You can specify options by <code>RunGameOptions</code>.</p>
 <ul>
   <li><code>GraphicsLibrary</code> specifies a graphics library Ebitengine will use.</li>
   <li><code>SkipTaskbar</code> indicates whether an application icon is hidden on a task bar or not on Windows. This is useful to create a desktop mascot application.</li>
@@ -34,12 +42,12 @@
 </ul>
 <h3>Customizing the screen shader</h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/2046">#2046</a>)</p>
-<p>A new interface <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#FinalScreenDrawer"><code>ebiten.FinalScreenDrawer</code></a> was introduced.</p>
+<p>A new interface <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#FinalScreenDrawer"><code>ebiten.FinalScreenDrawer</code></a> was added.</p>
 <p>If a game implementing <code>ebiten.Game</code> also implements <code>ebiten.FinalScreenDrawer</code>, its method <code>DrawFinalScreen</code> is called after its <code>Draw</code> is called and you can customize the final screen rendering there. If a game implementing <code>ebiten.Game</code> does NOT implement <code>ebiten.FinalScreenDrawer</code>, the default screen shader, which is similar to the nearest filter, is used.</p>
 <p>The given arguments of <code>FinalDraw</code> are the final screen image as the destination, the offscreen image as the source, and a geometry matrix to enlarge (or shrink) the offscreen to fit with the final screen. The offscreen image is the same as the argument of the game's <code>Draw</code>.</p>
 <h3><code>ebiten.ColorScale</code> and <code>colorm</code></h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/2171">#2171</a>)</p>
-<p>A new struct <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ColorScale"><code>ebiten.ColorScale</code></a> and a new package <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/colorm"><code>colorm</code></a> were introduced. These APIs aim to replace existing APIs for color matrices. This makes your code more explicit about execution costs i.e. a number of draw calls.</p>
+<p>A new struct <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ColorScale"><code>ebiten.ColorScale</code></a> and a new package <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/colorm"><code>colorm</code></a> were added. These APIs aim to replace existing APIs for color matrices. This makes your code more explicit about execution costs i.e. a number of draw calls.</p>
 <p>For just scalings, you can use a new struct <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ColorScale"><code>ebiten.ColorScale</code></a>. For more complex usages of a color matrix, you can use APIs in the package <code>colorm</code>.</p>
 <p>A new member <code>ColorScale</code> was also added to <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#DrawImageOptions"><code>ebiten.DrawImageOptions</code></a> and <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#DrawRectShaderOptions"><code>ebiten.DrawRectShaderOptions</code></a>.</p>
 <h3>Drag and drop files</h3>
