--- a/contents/index.html
+++ b/contents/index.html
@@ -77,6 +77,12 @@
 <div class="grid-container">
   <div class="grid-item-1">
     <figure>
+      <p class="img avatar"><a href="https://github.com/jcgraybill"><img src="https://github.com/jcgraybill.png?size=168" width="168"></a></p>
+      <figcaption><a href="https://github.com/jcgraybill">jcgraybill</a></figcaption>
+    </figure>
+  </div>
+  <div class="grid-item-1">
+    <figure>
       <p class="img avatar"><a href="https://github.com/pierrec"><img src="https://github.com/pierrec.png?size=168" width="168"></a></p>
       <figcaption><a href="https://github.com/pierrec">Pierre Curto</a></figcaption>
     </figure>
