contents/index: add Meg's Monster

--- a/contents/index.html
+++ b/contents/index.html
@@ -63,7 +63,7 @@
   <div class="grid-item-2">
     <figure>
       <p class="img avatar"><a href="https://odencat.com/"><img src="/images/odencat.png" width="168"></a></p>
-      <figcaption><a href="https://odencat.com/">Odencat Inc.</a><br>(Works: <a href="https://odencat.com/bearsrestaurant/switch/en.html">Bear's Restaurant</a>, <a href="https://odencat.com/fishingparadiso/en.html">Fishing Paradiso</a>, <a href="https://odencat.com/en/game/mousebusters/">Mousebusters</a>, etc.)</figcaption>
+      <figcaption><a href="https://odencat.com/">Odencat Inc.</a><br>(Works: <a href="https://odencat.com/bearsrestaurant/switch/en.html">Bear's Restaurant</a>, <a href="https://odencat.com/fishingparadiso/en.html">Fishing Paradiso</a>, <a href="https://odencat.com/en/game/mousebusters/">Mousebusters</a>, <a href="https://odencat.com/bakemono/">Meg's Monster</a>, etc.)</figcaption>
     </figure>
   </div>
   <div class="grid-item-2">
