--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -63,7 +63,7 @@
   <div class="grid-item-2">
     <figure>
       <p class="img avatar"><a href="https://odencat.com/"><img src="/images/odencat.png" width="168"></a></p>
-      <figcaption><a href="https://odencat.com/">Odencat 株式会社</a><br>(作品: <a href="https://odencat.com/bearsrestaurant/switch/ja.html">くまのレストラン</a>、<a href="https://odencat.com/fishingparadiso/ja.html">フィッシングパラダイス</a>、<a href="https://odencat.com/ja/game/mousebusters/">ねずみバスターズ</a>、他)</figcaption>
+      <figcaption><a href="https://odencat.com/">Odencat 株式会社</a><br>(作品: <a href="https://odencat.com/bearsrestaurant/switch/ja.html">くまのレストラン</a>、<a href="https://odencat.com/fishingparadiso/ja.html">フィッシングパラダイス</a>、<a href="https://odencat.com/ja/game/mousebusters/">ねずみバスターズ</a>、<a href="https://odencat.com/bakemono/">メグとばけもの</a>、他)</figcaption>
     </figure>
   </div>
   <div class="grid-item-2">
