--- a/contents/en/documents/2.5.html
+++ b/contents/en/documents/2.5.html
@@ -43,12 +43,12 @@
 <h3>Customizing the screen shader</h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/2046">#2046</a>)</p>
 <p>A new interface <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#FinalScreenDrawer"><code>ebiten.FinalScreenDrawer</code></a> was added.</p>
-<p>If a game implementing <code>ebiten.Game</code> also implements <code>ebiten.FinalScreenDrawer</code>, its method <code>DrawFinalScreen</code> is called after its <code>Draw</code> is called and you can customize the final screen rendering there. If a game implementing <code>ebiten.Game</code> does NOT implement <code>ebiten.FinalScreenDrawer</code>, the default screen shader, which is similar to the nearest filter, is used.</p>
-<p>The given arguments of <code>FinalDraw</code> are the final screen image as the destination, the offscreen image as the source, and a geometry matrix to enlarge (or shrink) the offscreen to fit with the final screen. The offscreen image is the same as the argument of the game's <code>Draw</code>.</p>
+<p>If a game implementing <code>ebiten.Game</code> also implements <code>ebiten.FinalScreenDrawer</code>, its method <code>DrawFinalScreen</code> is called after its <code>Draw</code> is called and you can customize the final screen rendering there. If a game implementing <code>ebiten.Game</code> does NOT implement <code>ebiten.FinalScreenDrawer</code>, the default screen shader, which is similar to the nearest-neighbor filter, is used.</p>
+<p>The given arguments of the function <code>DrawFinalScreen</code> are the final screen image as the destination, the offscreen image as the source, and a geometry matrix to enlarge (or shrink) the offscreen to fit with the final screen. The offscreen image is the same as the argument of the game's <code>Draw</code>.</p>
 <h3><code>ebiten.ColorScale</code> and <code>colorm</code></h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/2171">#2171</a>)</p>
-<p>A new struct <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ColorScale"><code>ebiten.ColorScale</code></a> and a new package <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/colorm"><code>colorm</code></a> were added. These APIs aim to replace existing APIs for color matrices. This makes your code more explicit about execution costs i.e. a number of draw calls.</p>
-<p>For just scalings, you can use a new struct <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ColorScale"><code>ebiten.ColorScale</code></a>. For more complex usages of a color matrix, you can use APIs in the package <code>colorm</code>.</p>
+<p>A new struct <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ColorScale"><code>ebiten.ColorScale</code></a> and a new package <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/colorm"><code>colorm</code></a> were added. These APIs aim to replace existing APIs for color matrices. These make your code more explicit about execution costs i.e. a number of draw calls.</p>
+<p>For just scalings, you can use the new struct <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ColorScale"><code>ebiten.ColorScale</code></a>. For more complex usages of a color matrix, you can use APIs in the package <code>colorm</code>.</p>
 <p>A new member <code>ColorScale</code> was also added to <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#DrawImageOptions"><code>ebiten.DrawImageOptions</code></a> and <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#DrawRectShaderOptions"><code>ebiten.DrawRectShaderOptions</code></a>.</p>
 <h3>Drag and drop files</h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/1868">#1868</a>, <a href="https://github.com/hajimehoshi/ebiten/issues/2552">#2552</a>)</p>
@@ -58,8 +58,8 @@
 <p>A new interface <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#LayoutFer"><code>ebiten.LayoutFer</code></a> was added. <code>LayoutFer</code> has <code>LayoutF</code> method which is a float-number version of <code>Game</code>'s <code>Layout</code>. If a game implementing <code>ebiten.Game</code> also implements <code>LayoutFer</code>, its <code>LayoutF</code> is invoked instead of its <code>Layout</code>. You can implement more precise layout caliculation with <code>LayoutF</code> than <code>Layout</code>.</p>
 <h3>GPU Optimization with <code>SetScreenClearedEveryFrame(false)</code></h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/2342">#2342</a>)</p>
-<p>When the screen is not cleared every frame by calling <code>SetScreenClearedEveryFrame(false)</code> and your <code>Draw</code> doesn't change anything, Ebitengine saves GPU usages.</p>
-<p>By this optimization, we no longer need <code>FPSModeVsyncOffMinimum</code>, which could save GPU power but was problematic for the performance e.g. when moving a mouse cursor quickly. In Ebitengine v2.5.0, the type <code>FPSModeType</code> and the APIs using it were deprecated. Instead, <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#SetVsyncEnabled"><code>ebiten.SetVsyncEnabled</code></a> and <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#IsVsyncEnabled"><code>ebiten.IsVsyncEnabled</code></a> were undeprecated.</p>
+<p>When the screen is not cleared every frame by calling <code>SetScreenClearedEveryFrame(false)</code> and your <code>Draw</code> doesn't change the screen, Ebitengine saves GPU usages.</p>
+<p>By this optimization, we no longer need <code>FPSModeVsyncOffMinimum</code>, which could save GPU power but was problematic for the performance e.g. when moving a mouse cursor quickly. In Ebitengine 2.5, the type <code>FPSModeType</code> and the APIs using it were deprecated. Instead, <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#SetVsyncEnabled"><code>ebiten.SetVsyncEnabled</code></a> and <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#IsVsyncEnabled"><code>ebiten.IsVsyncEnabled</code></a> were undeprecated.</p>
 <h3>Other new APIs</h3>
 <ul>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ColorScaleFormat"><code>type ebiten.ColorScaleFormat</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/2365">#2365</a>)</li>
@@ -85,7 +85,7 @@
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/292">#292</a>)</p>
 <p>OpenGL ES is now automatically chosen when available. In order to specify OpenGL ES explicitly, set an environment variable <code>EBITENGINE_OPENGL</code> with <code>es</code>.</p>
 <h3>Performance improvement</h3>
-<p>Ebitengine v2.5 has performance improvements including these items:</p>
+<p>Ebitengine 2.5 has performance improvements including these items:</p>
 <ul>
   <li>Rendering onto sub-images works more efficiently (<a href="https://github.com/hajimehoshi/ebiten/issues/2232">#2232</a>).</li>
   <li>Memory usage was reduced (<a href="https://github.com/hajimehoshi/ebiten/issues/2274">#2274</a>).</li>
@@ -95,7 +95,7 @@
 <h3>Deprecated APIs</h3>
 <p>Some APIs were deprecated. The deprecated APIs are still available during the version 2, but it is recommended to replace them with the new APIs.</p>
 <table>
-  <tr><th>v2.4 and older</th><th>v2.5 and newer</th></tr>
+  <tr><th>2.4 and older</th><th>2.5 and newer</th></tr>
   <tr><td><code>type ebiten.ColorM</code></td><td><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ColorScale"><code>type ebiten.ColorScale</code></a> or the package <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/colorm"><code>colorm</code></a></td></tr>
   <tr><td><code>type ebiten.CompositeMode</code></td><td><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#Blend"><code>type ebiten.Blend</code></a></td></tr>
   <tr><td><code>type ebiten.FPSModeType</code></td><td>n/a</td></tr>
@@ -118,8 +118,8 @@
 <p>This release includes all the bug fixes in the version 2.4.</p>
 <h3>Breaking changes</h3>
 <ul>
-  <li>Go 1.17 and older versions are no longer supported (<a href="https://github.com/hajimehoshi/ebiten/issues/2323">#2323</a>, <a href="https://github.com/hajimehoshi/ebiten/issues/2421">#2421</a>)</li>
-  <li>Old Edge browser is no longer supported (<a href="https://github.com/hajimehoshi/ebiten/issues/1059">#1059</a>)</li>
+  <li>Go 1.17 and older versions are no longer supported (<a href="https://github.com/hajimehoshi/ebiten/issues/2323">#2323</a>, <a href="https://github.com/hajimehoshi/ebiten/issues/2421">#2421</a>).</li>
+  <li>Old Edge browser is no longer supported (<a href="https://github.com/hajimehoshi/ebiten/issues/1059">#1059</a>).</li>
 </ul>
 <h3>Miscellaneous</h3>
 <ul>
