--- a/contents/en/documents/index.html
+++ b/contents/en/documents/index.html
@@ -13,6 +13,7 @@
 </ul>
 <h2>Release Notes</h2>
 <ul>
+  <li><a href="./2.5.html">2.5</a></li>
   <li><a href="./2.4.html">2.4</a></li>
   <li><a href="./2.3.html">2.3</a></li>
   <li><a href="./2.2.html">2.2</a></li>
