contents/ja/documents/2.5: update

--- a/contents/ja/documents/2.5.html
+++ b/contents/ja/documents/2.5.html
@@ -5,7 +5,7 @@
 <h3>Xbox のサポート</h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/2084">#2084</a>)</p>
 <p>Ebitengine は Xbox をサポートするようになりました! <a href="https://odencat.com">Odencat</a> が新しい Ebitengine 製ゲーム「<a href="https://odencat.com/bakemono/">メグとばけもの</a>」を 2023 年 3 月 2 日にリリースしました。このゲームは Xbox One および Xbox Series X|S を含む複数のプラットフォームをサポートしています。</p>
-<p>他のユーザーにも Ebitengine for Xbox が利用可能にするために、現在準備中です。お楽しみに!</p>
+<p>他のユーザーからも Xbox 向け Ebitengine を利用可能にするために、現在準備中です。お楽しみに!</p>
 <h3>ベクターグラフィックス</h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/1843">#1843</a>、 <a href="https://github.com/hajimehoshi/ebiten/issues/2387">#2387</a>)</p>
 <figure>
