contents/en/blog: add v2.5.0.html

--- a/contents/en/documents/2.5.html
+++ b/contents/en/documents/2.5.html
@@ -2,7 +2,7 @@
 <h2>v2.5.0</h2>
 <p><a href="https://github.com/hajimehoshi/ebiten/milestone/82?closed=1">Issues for v2.5.0</a></p>
 <p><em>Ebitengine v2.5.0 has not been released yet. This document is draft.</em></p>
-<h3>Supporting Xbox</h3>
+<h3>Xbox support</h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/2084">#2084</a>)</p>
 <p>Ebitengine now supports Xbox! <a href="https://odencat.com">Odencat</a> released a new Ebitengine game "<a href="https://odencat.com/bakemono/">Meg's Monster</a>" on March 2nd, 2023. This game supports multiple platforms including Xbox One and Xbox Series X|S.</p>
 <p>We are preparing more updates to make Ebitengine for Xbox available for other users. Stay tuned!</p>
