contents: remove -tags=example

--- a/contents/en/documents/install.html
+++ b/contents/en/documents/install.html
@@ -59,8 +59,7 @@
 
 <h2>Confirming your environment</h2>
 <p>You can check whether you have a correct environment by executing an example:</p>
-<pre><code>go run -tags=example github.com/hajimehoshi/ebiten/v2/examples/rotate@latest</code></pre>
-<p>Note that <code>-tags=example</code> is needed to execute the examples as the Ebitengine example packages require the build tag.</p>
+<pre><code>go run github.com/hajimehoshi/ebiten/v2/examples/rotate@latest</code></pre>
 <p>If you see this window with a rotating Gophers image, congratulations! You have a correct environment to use Ebitengine!</p>
 <p class="img thumbnail"><img src="/images/rotate.png" width="320" height="240" alt="Rotate example"></p>
 
