--- a/contents/en/documents/mobile.html
+++ b/contents/en/documents/mobile.html
@@ -153,5 +153,5 @@ ebitenmobile bind -target ios -o path/to/YourGame.xcframework .</code></pre>
 <pre><code>gomobile build github.com/yourname/yourpackage</code></pre>
 <p>That's it!</p>
 <p>You can install an Ebitengine's example directly with <code>gomobile install</code> on your Android device:</p>
-<pre><code>gomobile install -tags=example github.com/hajimehoshi/ebiten/v2/examples/paint</code></pre>
+<pre><code>gomobile install github.com/hajimehoshi/ebiten/v2/examples/paint</code></pre>
 <p>For more details, see <a href="https://github.com/golang/go/wiki/Mobile">the official Wiki page about gomobile</a>.</p>
