--- a/contents/ja/documents/install.html
+++ b/contents/ja/documents/install.html
@@ -59,8 +59,7 @@
 
 <h2>環境の確認</h2>
 <p>正しい環境を持っているかどうかは、サンプルを実行して確かめることができます:</p>
-<pre><code>go run -tags=example github.com/hajimehoshi/ebiten/v2/examples/rotate@latest</code></pre>
-<p><code>-tags=example</code> は Ebitengine のサンプルを実行するために必要です。 Ebitengine サンプルのパッケージがビルドタグを必要とするためです。</p>
+<pre><code>go run github.com/hajimehoshi/ebiten/v2/examples/rotate@latest</code></pre>
 <p>回転する Gopher の絵がウィンドウ上に表示されたならば、おめでとうございます! Ebitengine を動かすための正しい環境が整いました。</p>
 <p class="img thumbnail"><img src="/images/rotate.png" width="320" height="240" alt="Rotate example"></p>
 
